--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,93 @@
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(255, 246, 236) 39.5%,
+    rgba(100, 46, 122, 0.23) 100.2%
+  );
+}
 
+.calculator {
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15),
+    0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  margin-block-start: 2em;
+  max-inline-size: 22rem;
+  overflow: hidden;
+  color: hsl(202, 11%, 29%);
+  border-radius: 20px;
+}
+
+#display {
+  background: hsl(207, 19%, 61%);
+  color: hsl(255, 100%, 100%);
+  font-size: 4.2rem;
+  padding-block-start: 3rem;
+  padding-block-end: 0.5rem;
+  padding-inline-end: 1.25rem;
+  text-align: left;
+  width: 450px;
+  border: none;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1px;
+  background: hsl(207, 19%, 61%);
+  padding: 0.5rem;
+}
+
+.calculator_key {
+  background: hsl(206, 14%, 41%);
+  color: hsl(255, 100%, 100%);
+  border: none;
+  padding-block-start: 1rem;
+  padding-block-end: 1rem;
+  padding-inline-end: 1.25rem;
+  padding-inline-start: 1.25rem;
+  font-size: 1.5rem;
+  inline-size: 70px;
+  block-size: 70px;
+  margin: 0.25rem;
+  border-radius: 40px;
+  cursor: pointer;
+}
+
+.calculator_key:active,
+.calculator_key:focus {
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3) inset;
+  outline: none;
+}
+
+.calculator_key--operator {
+  background: hsl(208, 25%, 86%);
+}
+
+.calculator_key--operator:active {
+  background: hsl(208, 24%, 80%);
+}
+
+.calculator_key--enter {
+  grid-column: 4 / 5;
+  grid-row: 2 / span 4;
+  background: hsl(357, 100%, 72%);
+  height: auto;
+}
+
+input {
+  width: 200px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  font-size: 16px;
+}
