--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -90,4 +92,9 @@ button {
   width: 50px;
   height: 50px;
   font-size: 16px;
+}
+
+footer {
+  margin-top: auto;
+  color: #142d4c;
 }
